Adjust project grid widths and ensure titles wrap

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -153,6 +153,12 @@
 .archive__item-title {
   margin-bottom: 0.25em;
   font-family: $sans-serif-narrow;
+  overflow-wrap: break-word;
+
+  a {
+    display: inline-block;
+    max-width: 100%;
+  }
 
   a + a {
     opacity: 0.5;
